Persist state on location change
