# swagger.yml
@@ -124,7 +124,10 @@ definitions:
   user:
     type: object
     properties:
-      name:
+      first_name:
+        type: string
+        minLength: 1
+      last_name:
         type: string
         minLength: 1
       image_url:
@@ -136,6 +139,9 @@ definitions:
       following:
         type: integer
         format: int64
+      id:
+        type: string
+        minLength: 1
   pin:
     type: object
     properties:
